# quiz_generate

./: .gitignore  app.py  hello.py  pyproject.toml  requirements.txt
