[project]
name = "quiz-generate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.19",
    "langchain-core>=0.3.39",
    "langchain-google-genai>=2.0.10",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.2",
]
